# vpn-killswitch

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
src/: ipinfo.rs  main.rs
src/ip2asn/: mod.rs
src/public_ip/: error.rs  ifconfigco.rs  ipapico.rs  ipapicom.rs  ipifyorg.rs  ipwhois.rs  mod.rs  myipcom.rs  myipio.rs  provider.rs  public_ip.rs
