[package]
name = "vpn-killswitch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["json", "tokio"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = { version = "0.11.8", features = ["auto-color", "color", "humantime"] }
log = "0.4.29"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z" # optimize for size
lto = true # enables link time optimization
codegen-units = 1 # default is 16
panic = "abort" # don't unwind
